# SkyGrip

./: .gitignore  README.md
3D Model/: details.txt
3D Model/Manipulator/: Base.SLDPRT  Base.STEP  Manipulator.SLDASM  XM,H-430_idler.SLDASM  arm1-Static 1.MFC  arm1-Static 1.PGF  arm1.SLDPRT  arm1.STEP  battery.SLDPRT  claw open.SLDPRT  connector1.SLDPRT  drone.SLDPRT  little bearing.SLDPRT  little bearing.STEP  motor1.SLDPRT  motor2.SLDASM  motor2.SLDPRT  motor2drone.SLDPRT  motor2drone.STEP  new connector1.SLDPRT  new connector1.STEP  raspi_shelf.SLDPRT  raspi_shelf.STEP
Mujoco/: Link_1.STL  Link_2.stl  SkyGrip_URDF.urdf  XML_creater.py  base_link.STL  base_link.stl  create_force.py  drone_with_rotors.xml  mjmodel.xml  mppi.urdf  test.py
PyBullet/: mppi_real_driver.py
PyBullet/configs/: mppi.json
PyBullet/models/mppi/: Link_1.stl  mppi.csv  mppi.urdf
PyBullet/simulation_and_control/sim/: pybullet_robot_interface.py
Reports/: Pitch.docx
RoboEnv/: mppi_real_driver.py  run_dual_cotrol.py
RoboEnv/bridge/: unified_robot_controller.py
RoboEnv/configs/: mppi.json
SkyGrip_URDF/: CMakeLists.txt  package.xml
SkyGrip_URDF/launch/: display.launch  gazebo.launch
SkyGrip_URDF/meshes/: Link_1.STL  Link_2.STL
SkyGrip_URDF/urdf/: SkyGrip_URDF.csv  SkyGrip_URDF.urdf
URDF/Manipulator.SLDASM/meshes/: base_link.STL
mppi/: CMakeLists.txt  package.xml
mppi/launch/: display.launch  display.launch.py  gazebo.launch
mppi/meshes/: Link_1.stl  Link_2.stl  base_link.stl
mppi/rviz/: default.rviz
mppi/scripts/: joint_publisher.py
mppi/urdf/: mppi.csv  mppi.urdf
(+5 files in other folders)
